even with 9469fe4

--- a/Data/Sys/GameSettings/GALJ01r2.ini
+++ b/Data/Sys/GameSettings/GALJ01r2.ini
@@ -1,6 +1,5 @@
 # GALJ01 - Super Smash Bros. Melee NTSC-J 1.02
 
-# no idea if these even do anything in mainline
 [Core]
 CPUThread = True
 GPUDeterminismMode = fake-completion
@@ -580,6 +579,7 @@ C216EA30 00000004 #Common/Winners Names are Gold on CSS/Remember Who LRA Started
 04261B1C 60000000 #External/Closing CSS Door Preserves Nametag/On Window Close/Skip Nametag ID Reset.asm
 04261B30 60000000 #External/Closing CSS Door Preserves Nametag/On Window Close/Skip isUsingNametag Bool Reset.asm
 042605FC 38C00003 #External/Unplugging Closes CSS Door/Unplugging Closes CSS Door.asm
+041239A8 60000000 #External/FreezeGlitchFix/FreezeGlitchFix.asm
 
 $Required: Slippi Recording [Fizzi, Achilles, UnclePunch]
 *Saves replays, Slippi device must be in Slot B.
@@ -3416,7 +3416,7 @@ C21BFA20 00000012 #Online/Slippi Online Scene/boot.asm
 3D80801B 618C136C
 7D8903A6 4E800420
 38600001 00000000
-C21A45BC 00000114 #Online/Slippi Online Scene/main.asm
+C21A45BC 0000011A #Online/Slippi Online Scene/main.asm
 7C0802A6 90010004
 9421FF50 BE810008
 3C80803E 6084DC1C
@@ -3425,7 +3425,7 @@ C21A45BC 00000114 #Online/Slippi Online Scene/main.asm
 38600000 986DAFA3
 986DAFC8 38600008
 4800015D 7C8802A6
-4800002D 48000838
+4800002D 48000868
 80830000 5485467A
 2C050048 40820014
 548401BA 7C840734
@@ -3480,8 +3480,8 @@ BA810008 800100B4
 03030000 00000000
 00000000 05000000
 00000000 00000000
-04030000 480002F5
-48000475 20000000
+04030000 48000325
+480004A5 20000000
 80490880 804D68D0
 FF000000 4E800021
 81940000 7C0802A6
@@ -3517,7 +3517,7 @@ BE810008 7C7E1B78
 2C030000 40820000
 886DAFCA 2C030000
 41820020 48000004
-48000389 3C808047
+480003B9 3C808047
 60849D30 38600005
 98640005 48000018
 3C808047 60849D30
@@ -3545,7 +3545,7 @@ BE810008 7C7F1B78
 4E800421 7C7E1B78
 887E0001 889E0002
 7C032000 4082001C
-480002A9 3C808047
+480002D9 3C808047
 60849D30 38600005
 98640005 4800001C
 38600000 3D80801A
@@ -3560,7 +3560,13 @@ BE810008 3D80801B
 4E800421 38600000
 3D808000 618C5610
 7D8903A6 4E800421
-7C7F1B78 887F0003
+7C7F1B78 3A800000
+3AA00000 7E83A378
+48000329 2C030000
+41820008 3AB50001
+3A940001 2C140004
+4180FFE4 2C150001
+4082001C 887F0003
 48000301 2C030000
 4182000C 38600001
 48000008 38600000
@@ -3932,7 +3938,7 @@ C21A5018 00000005
 04218D68 C8228000
 
 $Optional: Widescreen 16:9 [Dan Salvato, mirrorbender, Achilles1515, UnclePunch]
-*Set Aspect Ratio to "Force 16:9" in Graphics for 16:9 monitors ----------------------
+*Set Aspect Ratio to "Force 16:9" in Graphics for 16:9 monitors ---------------------- 
 *Will not cause desyncs when playing online
 043BB05C 3EB00000 #External/Widescreen/Fix Screen Flash.asm
 C236A4A8 00000006 #External/Widescreen/Overwrite CObj Values.asm
@@ -3959,17 +3965,17 @@ C0030000 4800000C
 044DDB84 3E89FEFA #External/Widescreen/Nametag Fixes/Adjust Nametag Text X Scale.asm
 
 $Optional: Disable Screen Shake [Achilles1515]
-*Will prevent screen from shaking on hits, KOs, collisions, etc -----------------------
+*Will prevent screen from shaking on hits, KOs, collisions, etc ----------------------- 
 *Will not cause desyncs when playing online
 04030E44 4E800020
 
 $Optional: Center Align 2P HUD [Achilles1515]
-*When playing online, character %'s will always be centered -------------------------
+*When playing online, character %'s will always be centered ------------------------- 
 *Will not cause desyncs when playing online
 0416E9AC 38600002
 
 $Optional: Flash Red on Failed L-Cancel [Achilles1515, Fizzi]
-*When playing online, this will only affect your character ---------------------------
+*When playing online, this will only affect your character --------------------------- 
 *Will not cause desyncs when playing online
 C20C0148 0000000C #External/FlashRedFailedLCancel/ChangeColor.asm
 387F0488 89FE0564
