--- a/Source/Core/Scripting/Scripting.vcxproj.filters
+++ b/Source/Core/Scripting/Scripting.vcxproj.filters
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <ClCompile Include="ScriptingEngine.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ScriptingEngine.h" />
+  </ItemGroup>
+  <ItemGroup>
     <Text Include="CMakeLists.txt" />
   </ItemGroup>
 </Project>
