--- a/Data/Sys/GameSettings/GALE01r2playback.ini
+++ b/Data/Sys/GameSettings/GALE01r2playback.ini
@@ -3,7 +3,7 @@
 [Core]
 CPUThread = False
 GPUDeterminismMode = fake-completion
-PollingMethod = OnSIRead
+EnableCheats = True
 FastDiscSpeed = True
 
 [Gecko_Enabled]
