--- a/Data/Sys/GameSettings/GALJ01r2.ini
+++ b/Data/Sys/GameSettings/GALJ01r2.ini
@@ -3,8 +3,7 @@
 [Core]
 CPUThread = True
 GPUDeterminismMode = fake-completion
-PollingMethod = OnSIRead
-FastDiscSpeed = True
+EnableCheats = True
 
 [Gecko_Enabled]
 $Required: General Codes
@@ -3938,7 +3937,7 @@ C21A5018 00000005
 04218D68 C8228000
 
 $Optional: Widescreen 16:9 [Dan Salvato, mirrorbender, Achilles1515, UnclePunch]
-*Set Aspect Ratio to "Force 16:9" in Graphics for 16:9 monitors ---------------------- 
+*Set Aspect Ratio to "Force 16:9" in Graphics for 16:9 monitors ----------------------
 *Will not cause desyncs when playing online
 043BB05C 3EB00000 #External/Widescreen/Fix Screen Flash.asm
 C236A4A8 00000006 #External/Widescreen/Overwrite CObj Values.asm
@@ -3965,17 +3964,17 @@ C0030000 4800000C
 044DDB84 3E89FEFA #External/Widescreen/Nametag Fixes/Adjust Nametag Text X Scale.asm
 
 $Optional: Disable Screen Shake [Achilles1515]
-*Will prevent screen from shaking on hits, KOs, collisions, etc ----------------------- 
+*Will prevent screen from shaking on hits, KOs, collisions, etc -----------------------
 *Will not cause desyncs when playing online
 04030E44 4E800020
 
 $Optional: Center Align 2P HUD [Achilles1515]
-*When playing online, character %'s will always be centered ------------------------- 
+*When playing online, character %'s will always be centered -------------------------
 *Will not cause desyncs when playing online
 0416E9AC 38600002
 
 $Optional: Flash Red on Failed L-Cancel [Achilles1515, Fizzi]
-*When playing online, this will only affect your character --------------------------- 
+*When playing online, this will only affect your character ---------------------------
 *Will not cause desyncs when playing online
 C20C0148 0000000C #External/FlashRedFailedLCancel/ChangeColor.asm
 387F0488 89FE0564
