hook up basic python scripting backend

--- a/Source/Core/Scripting/Scripting.vcxproj
+++ b/Source/Core/Scripting/Scripting.vcxproj
@@ -42,8 +42,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ScriptingEngine.cpp" />
+    <ClCompile Include="Python\PyScriptingBackend.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Python\PyScriptingBackend.h" />
+    <ClInclude Include="Python\Utils\gil.h" />
     <ClInclude Include="ScriptingEngine.h" />
   </ItemGroup>
   <ItemGroup>
