--- a/Source/Core/Scripting/Scripting.vcxproj.filters
+++ b/Source/Core/Scripting/Scripting.vcxproj.filters
@@ -2,9 +2,26 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="ScriptingEngine.cpp" />
+    <ClCompile Include="Python\PyScriptingBackend.cpp">
+      <Filter>Python</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ScriptingEngine.h" />
+    <ClInclude Include="Python\PyScriptingBackend.h">
+      <Filter>Python</Filter>
+    </ClInclude>
+    <ClInclude Include="Python\Utils\gil.h">
+      <Filter>Python\Utils</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Python">
+      <UniqueIdentifier>{4139d98d-00f6-4e16-a15b-68d5e3311cba}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Python\Utils">
+      <UniqueIdentifier>{eeff862f-8e3a-4c8b-a5d3-35a5e8c992f2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
