add memory and dolphin module to python scripting

--- a/Source/Core/Scripting/Scripting.vcxproj
+++ b/Source/Core/Scripting/Scripting.vcxproj
@@ -44,7 +44,9 @@
     <ClCompile Include="ScriptingEngine.cpp" />
     <ClCompile Include="Python\coroutine.cpp" />
     <ClCompile Include="Python\Modules\doliomodule.cpp" />
+    <ClCompile Include="Python\Modules\dolphinmodule.cpp" />
     <ClCompile Include="Python\Modules\eventmodule.cpp" />
+    <ClCompile Include="Python\Modules\memorymodule.cpp" />
     <ClCompile Include="Python\PyScriptingBackend.cpp" />
     <ClCompile Include="Python\Utils\object_wrapper.cpp" />
   </ItemGroup>
@@ -53,7 +55,9 @@
     <ClInclude Include="Python\coroutine.h" />
     <ClInclude Include="Python\PyScriptingBackend.h" />
     <ClInclude Include="Python\Modules\doliomodule.h" />
+    <ClInclude Include="Python\Modules\dolphinmodule.h" />
     <ClInclude Include="Python\Modules\eventmodule.h" />
+    <ClInclude Include="Python\Modules\memorymodule.h" />
     <ClInclude Include="Python\Utils\as_py_func.h" />
     <ClInclude Include="Python\Utils\fmt.h" />
     <ClInclude Include="Python\Utils\gil.h" />
