--- a/Source/Core/Scripting/Scripting.vcxproj.filters
+++ b/Source/Core/Scripting/Scripting.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClInclude Include="Python\Utils\as_py_func.h">
       <Filter>Python\Utils</Filter>
     </ClInclude>
+    <ClInclude Include="Python\Utils\convert.h">
+      <Filter>Python\Utils</Filter>
+    </ClInclude>
     <ClInclude Include="Python\Utils\fmt.h">
       <Filter>Python\Utils</Filter>
     </ClInclude>
