Mario Party Specific Rich Presence
Signed-off-by: CrankySupertoon <crankysupertoon@gmail.com>

--- a/Source/Core/Core/Core.vcxproj
+++ b/Source/Core/Core/Core.vcxproj
@@ -267,6 +267,8 @@
     <ClCompile Include="IOS\USB\Bluetooth\WiimoteHIDAttr.cpp" />
     <ClCompile Include="IOS\WFS\WFSI.cpp" />
     <ClCompile Include="IOS\WFS\WFSSRV.cpp" />
+    <ClCompile Include="MarioPartyNetplay\Discord.cpp" />
+    <ClCompile Include="MarioPartyNetplay\Gamestate.cpp" />
     <ClCompile Include="MemTools.cpp" />
     <ClCompile Include="Movie.cpp" />
     <ClCompile Include="NetPlayClient.cpp" />
@@ -621,6 +623,8 @@
     <ClInclude Include="IOS\WFS\WFSSRV.h" />
     <ClInclude Include="IOS\WFS\WFSI.h" />
     <ClInclude Include="MachineContext.h" />
+    <ClInclude Include="MarioPartyNetplay\Discord.h" />
+    <ClInclude Include="MarioPartyNetplay\Gamestate.h" />
     <ClInclude Include="MemTools.h" />
     <ClInclude Include="Movie.h" />
     <ClInclude Include="NetPlayClient.h" />
