--- a/Source/Core/Core/Core.vcxproj.filters
+++ b/Source/Core/Core/Core.vcxproj.filters
@@ -463,9 +463,6 @@
     <ClCompile Include="HW\EXI\EXI_DeviceMic.cpp">
       <Filter>HW %28Flipper/Hollywood%29\EXI - Expansion Interface</Filter>
     </ClCompile>
-    <ClCompile Include="HW\EXI\BBA-TAP\TAP_Win32.cpp">
-      <Filter>HW %28Flipper/Hollywood%29\EXI - Expansion Interface</Filter>
-    </ClCompile>
     <ClCompile Include="HW\Sram.cpp">
       <Filter>HW %28Flipper/Hollywood%29\EXI - Expansion Interface</Filter>
     </ClCompile>
@@ -996,12 +993,10 @@
     <ClCompile Include="PowerPC\Jit64\RegCache\FPURegCache.cpp">
       <Filter>PowerPC\Jit64</Filter>
     </ClCompile>
-    <ClCompile Include="HW\EXI\BBA\XLINK_KAI_BBA.cpp">
-      <Filter>HW %28Flipper/Hollywood%29\EXI - Expansion Interface\BBA</Filter>
-    </ClCompile>
-    <ClCompile Include="HW\EXI\BBA\TAP_Win32.cpp">
-      <Filter>HW %28Flipper/Hollywood%29\EXI - Expansion Interface\BBA</Filter>
-    </ClCompile>
+    <ClCompile Include="HW\EXI\BBA\TAP_Win32.cpp" />
+    <ClCompile Include="HW\EXI\BBA\XLINK_KAI_BBA.cpp" />
+    <ClCompile Include="MarioPartyNetplay\Discord.cpp" />
+    <ClCompile Include="MarioPartyNetplay\Gamestate.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BootManager.h" />
@@ -1240,9 +1235,6 @@
       <Filter>HW %28Flipper/Hollywood%29\EXI - Expansion Interface</Filter>
     </ClInclude>
     <ClInclude Include="HW\EXI\EXI_DeviceMic.h">
-      <Filter>HW %28Flipper/Hollywood%29\EXI - Expansion Interface</Filter>
-    </ClInclude>
-    <ClInclude Include="HW\EXI\BBA-TAP\TAP_Win32.h">
       <Filter>HW %28Flipper/Hollywood%29\EXI - Expansion Interface</Filter>
     </ClInclude>
     <ClInclude Include="HW\Sram.h">
@@ -1755,10 +1747,10 @@
     <ClInclude Include="PowerPC\JitArmCommon\BackPatch.h">
       <Filter>PowerPC\JitArmCommon</Filter>
     </ClInclude>
-    <ClInclude Include="HW\EXI\BBA\TAP_Win32.h">
-      <Filter>HW %28Flipper/Hollywood%29\EXI - Expansion Interface\BBA</Filter>
-    </ClInclude>
     <ClInclude Include="SyncIdentifier.h" />
+    <ClInclude Include="HW\EXI\BBA\TAP_Win32.h" />
+    <ClInclude Include="MarioPartyNetplay\Discord.h" />
+    <ClInclude Include="MarioPartyNetplay\Gamestate.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
