gecko: MPN Codes

--- a/Data/Sys/GameSettings/GFZE01.ini
+++ b/Data/Sys/GameSettings/GFZE01.ini
@@ -31,3 +31,8 @@ $All Vehicles Unlocked
 420030C8 0002FFFF
 420030C8 0003FFFF
 840030C8 FFDC6F00
+
+[ActionReplay_Enabled]
+$Beat All Cups (unlock Master class/Diamond Cup)
+$Unlock AX Cup Tracks
+$All Vehicles Unlocked
