--- a/Source/iOS/csdbgd/Entitlements.plist
+++ b/Source/iOS/csdbgd/Entitlements.plist
@@ -10,5 +10,15 @@
 	<array>
 		<string>me.oatmealdome</string>
 	</array>
+	<key>com.apple.springboard.debugapplications</key>
+    <true/>
+    <key>com.apple.backboardd.debugapplications</key>
+    <true/>
+    <key>com.apple.frontboard.debugapplications</key>
+    <true/>
+    <key>com.apple.private.cs.debugger</key>
+    <true/>
+	<key>task_for_pid-allow</key>
+	<true/>
 </dict>
 </plist>
