--- a/Source/Core/Scripting/Scripting.vcxproj
+++ b/Source/Core/Scripting/Scripting.vcxproj
@@ -41,6 +41,7 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Python\Modules\guimodule.cpp" />
     <ClCompile Include="ScriptingEngine.cpp" />
     <ClCompile Include="Python\coroutine.cpp" />
     <ClCompile Include="Python\Modules\doliomodule.cpp" />
@@ -51,6 +52,7 @@
     <ClCompile Include="Python\Utils\object_wrapper.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Python\Modules\guimodule.h" />
     <ClInclude Include="ScriptingEngine.h" />
     <ClInclude Include="Python\coroutine.h" />
     <ClInclude Include="Python\PyScriptingBackend.h" />
