--- a/Source/Core/Scripting/Scripting.vcxproj.filters
+++ b/Source/Core/Scripting/Scripting.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClCompile Include="Python\Utils\object_wrapper.cpp">
       <Filter>Python\Utils</Filter>
     </ClCompile>
+    <ClCompile Include="Python\Modules\guimodule.cpp">
+      <Filter>Python\Modules</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ScriptingEngine.h" />
@@ -61,6 +64,9 @@
     </ClInclude>
     <ClInclude Include="Python\Utils\object_wrapper.h">
       <Filter>Python\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="Python\Modules\guimodule.h">
+      <Filter>Python\Modules</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
