add savestate module to python scripting

--- a/Source/Core/Scripting/Scripting.vcxproj
+++ b/Source/Core/Scripting/Scripting.vcxproj
@@ -48,6 +48,7 @@
     <ClCompile Include="Python\Modules\dolphinmodule.cpp" />
     <ClCompile Include="Python\Modules\eventmodule.cpp" />
     <ClCompile Include="Python\Modules\memorymodule.cpp" />
+    <ClCompile Include="Python\Modules\savestatemodule.cpp" />
     <ClCompile Include="Python\PyScriptingBackend.cpp" />
     <ClCompile Include="Python\Utils\object_wrapper.cpp" />
   </ItemGroup>
@@ -60,6 +61,7 @@
     <ClInclude Include="Python\Modules\dolphinmodule.h" />
     <ClInclude Include="Python\Modules\eventmodule.h" />
     <ClInclude Include="Python\Modules\memorymodule.h" />
+    <ClInclude Include="Python\Modules\savestatemodule.h" />
     <ClInclude Include="Python\Utils\as_py_func.h" />
     <ClInclude Include="Python\Utils\convert.h" />
     <ClInclude Include="Python\Utils\fmt.h" />
