--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -28,7 +28,7 @@ jobs:
     # Setup Packages
     - name: Setup Packages
       run: brew install qt5 pkgconfig
-    # Remove Static ZSTD
+    # Use Static ZSTD
     - name: Remove ZSTD
       run: brew uninstall zstd --force
     # Run CMake
@@ -44,5 +44,5 @@ jobs:
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: DolphinMPN-Linux
+        name: DolphinMPN-macOS
         path: /Users/runner/work/dolphin-mpn/dolphin-mpn/build/Binaries/
